--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -57,6 +57,7 @@
       class="logo me-auto navbar-brand"
       style="width: 80px; height: 80px"
       alt="logo"
+      
     />
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul>
@@ -73,11 +74,11 @@
 
         <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
 
-        <li>
+        <!-- <li>
           <a class="nav-link scrollto" href="#doctors">{{
             "TotalDoctors" | translate
           }}</a>
-        </li>
+        </li> -->
         <!-- <li class="dropdown"><a href="#">Dropdown<i class="fa-solid fa-caret-down"></i></a>
                     <ul>
                         <li><a href="#">Drop Down 1</a></li>
@@ -209,6 +210,7 @@
           class="rounded-circle"
           alt="user img"
           style="height: 2rem"
+          onerror="this.onerror=null;this.src=`../../../assets/avatar/Avatar.svg`"
         />
       </div>
 
