--- a/src/app/patient/components/patientdashboard/patientdashboard.component.html
+++ b/src/app/patient/components/patientdashboard/patientdashboard.component.html
@@ -2,7 +2,7 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="container-fluid p-3">
+<div class="container-fluid p-3"  *ngIf="checkLoader">
   <div class="row">
     <div class="col-xl-6 mb-4">
       <div class="card shadow">
