--- a/src/app/admin/add-user/add-user.component.html
+++ b/src/app/admin/add-user/add-user.component.html
@@ -126,6 +126,9 @@
 
         </div>
     </form>
+    <div class=" d-flex justify-content-center " *ngIf="!checkLoader">
+        <mat-spinner></mat-spinner>
+      </div>
 </div>
 
 
