--- a/src/app/admin/view-users/view-users.component.html
+++ b/src/app/admin/view-users/view-users.component.html
@@ -20,6 +20,8 @@
                     <th scope="col ">{{"Gender" | translate}}</th>
                     <th scope="col ">{{"mobilePhone" | translate}}</th>
                     <th scope="col ">{{"type" | translate}}</th>
+                    <th scope="col "></th>
+
 
                 </tr>
             </thead>
@@ -30,6 +32,7 @@
                     <td>{{user.gender}}</td>
                     <td>{{user.mobilePhone}}</td>
                     <td>{{user.type}}</td>
+                    <td><button (click)="deleteUser(user._id)" class="btn btn-danger">{{"Delete" | translate}}</button></td>
 
                 </tr>
 
